--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vrms (1.11) UNRELEASED; urgency=low
+
+  * Acknowledge the NMU made earlier;
+  * Closes: #252146, #306734, #211988, #274296, #302504, #158702;
+  * Forgot to mention minor fixes of vrms in the previous version.
+
+ -- Rogério Brito <rbrito@users.sf.net>  Thu, 13 Oct 2005 02:45:39 -0300
+
 vrms (1.10) unstable; urgency=low
 
   [ Bdale Garbee ]
