Wrote about the ubuntu patch on changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,9 @@ vrms (1.11) UNRELEASED; urgency=high
   * Forgot to mention minor fixes of vrms in the previous version;
   * debian/control: updated build-dependency to debhelper (>= 4.0.0);
   * debian/control: cosmetic change to long description;
-  * Gave this changelog a proper facelift (thanks to Lionel Elie Mamane).
+  * Gave this changelog a proper facelift (thanks: Lionel Elie Mamane);
+  * Incorporated a slightly modified version Ubuntu's patch for checking
+	for non-free packages (thanks: Martin Meredith).
 	
  -- Rogério Brito <rbrito@users.sf.net>  Thu, 13 Oct 2005 02:45:39 -0300
 
