--- a/debian/changelog
+++ b/debian/changelog
@@ -2,13 +2,15 @@ vrms (1.13) UNRELEASED; urgency=low
 
   [ Rogério Brito ]
   * Acknowledge the NMU work done by Christian Perrier;
+  * debian/control: removed "Depends:" field completely;
+  * debian/postinst: removed: it did nothing. Tks: Joey Hess (Closes: #419147);
   * debian/rules: change the rules so that the "arch: all" package is
     built in the "binary-indep" target, which is more correct than in
     the "binary-arch" target;
-  * debian/postinst: removed: it did nothing. Tks: Joey Hess (Closes: #419147);
-  * vrms: don't complain with packages missing Section field. Tks: Joey Hess (Closes: #161368);
   * reasons/vrms: remove mpg123 entries. Tks: Daniel Kobras (Closes: #397445);
   * reasons/vrms: include tango-icon-theme. Tks: Chris Lamb (Closes: #403752);
+  * vrms: don't complain with packages missing Section field. Tks: Joey Hess (Closes: #161368);
+  * vrms: removed dependency on diagnostics.pm;
 
  -- Rogério Brito <rbrito@users.sf.net>  Wed, 11 Jul 2007 18:35:39 -0300
 
