Included XS-Vcs-SVN line in control file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ vrms (1.13) UNRELEASED; urgency=low
   [ Rogério Brito ]
   * Acknowledge the NMU work done by Christian Perrier;
   * debian/control: removed "Depends:" field completely;
+  * debian/control: added "XS-Vcs-SVN:" field for our repository;
   * debian/postinst: removed: it did nothing. Tks: Joey Hess (Closes: #419147);
   * debian/rules: change the rules so that the "arch: all" package is
     built in the "binary-indep" target, which is more correct than in
