--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vrms (1.16) UNRELEASED; urgency=low
+
+  * vrms:
+    + consider the section "partner" as non-free. (LP: #284078).
+
+ -- Rogério Brito <rbrito@ime.usp.br>  Wed, 29 Jul 2009 16:56:55 -0300
+
 vrms (1.15) unstable; urgency=low
 
   [ Rogério Brito ]
