--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
 vrms (1.16) UNRELEASED; urgency=low
 
+  [ Rogério Brito ]
   * vrms:
     + consider the section "partner" as non-free. (LP: #284078).
 
- -- Rogério Brito <rbrito@ime.usp.br>  Wed, 29 Jul 2009 16:56:55 -0300
+  [ Bdale Garbee ]
+  * debian/control:
+    + update maintainer address, standards version, VCS fields
+  * debian/rules, debian/compat:
+    + switch to using debhelper 8 dh
+
+ -- Bdale Garbee <bdale@gag.com>  Fri, 26 Aug 2011 09:26:28 -0600
 
 vrms (1.15) unstable; urgency=low
 
