--- a/vrms.1
+++ b/vrms.1
@@ -1,11 +1,11 @@
 .TH VRMS 1 "A Cute Little Hack" \" -*- nroff -*-
 .SH NAME
-vrms \- report of installed non-free software
+vbg \- report of installed non-proprietary software
 .SH SYNOPSIS
-.B vrms
+.B vbg
 [\fIOPTION\fR] ...
 .SH DESCRIPTION
-This program began as an attempt to create a "virtual Richard M. Stallman" for
+This program began as an attempt to create a "virtual anti-Richard M. Stallman" for
 Debian GNU/Linux.  Thus the choice of name.
 .PP
 This program analyzes the currently-installed package list on a Debian 
@@ -46,7 +46,7 @@ Just output a list of non-free packages.
 .TP
 \fB\-\-reason\-dir\fR=\fIDIR\fR
 Use \fIDIR\fR as the reason directory, instead of
-/usr/share/vrms/reasons/.
+/usr/share/vbg/reasons/.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Display help.
@@ -55,10 +55,11 @@ Display help.
 Generate debugging information.
 .SH FILES
 .TP
-.I /usr/share/vrms/reasons
+.I /usr/share/vbg/reasons
 Default source of explanations for why packages are non-free.
 .SH HISTORY
 This program was written by Bdale Garbee and Bill Geddes for the Debian 
 GNU/Linux system, in response to an open discussion with Richard Stallman
 about the issues surrounding the availability/desirability of the 'non-free' 
-package tree in Debian.
+package tree in Debian. This project was later forked for reverse its intended 
+purpose and thus report non-proprietary packages.
